<resources>
    <string name="app_name">Epi Info - Vector Surveillance</string>
    <string name="lang_suffix"></string>
    <string name="record_viewer">Record Viewer</string>
    <string name="interviewer">Interviewer</string>
    <string name="analysis">Analysis</string>
    <string name="insuff_data">Insufficient Data</string>
    <string name="no_records">&lt;No Records&gt;</string>
    <string name="no_matching_records">No matching records found</string>
    <string name="menu_insert">Add Record</string>
    <string name="add">Add</string>
    <string name="menu_save">Save Record</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_help">Help</string>
    <string name="menu_delete">Delete Record</string>
    <string name="menu_copy">Copy Record</string>
    <string name="menu_delete_all">Delete All Data</string>
    <string name="menu_analyze">Analyze Data</string>
    <string name="menu_locate">Capture Coordinates</string>
    <string name="menu_barcode">Scan Barcode</string>
    <string name="menu_cloud_sync">Sync with Cloud</string>
    <string name="menu_sync_file">Create Sync File</string>
    <string name="menu_export_all">Export all data</string>
    <string name="menu_search">Search</string>
    <string name="menu_exit">Exit</string>
    <string name="menu_exit_no_save">Exit without saving</string>
    <string name="all">All</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="prev">Prev</string>
    <string name="next">Next</string>
    <string name="load">Load</string>
    <string name="set">Set</string>
    <string name="clear">Clear</string>
    <string name="start_date">Starting date:</string>
    <string name="end_date">Ending date:</string>
    <string name="record_id">Record ID:  </string>
    <string name="record_preview">Preview:  </string>
    <string name="conf_level_prompt">Two-sided confidence level</string>
    <string name="not_in_range" formatted="false">Value is not in the given range.\r\nMinimum Range: %s \r\nMaximum Range: %s</string>
    <string name="required_field">This is a required field.</string>
    <string name="set_password">Set password for Epi Info 7 sync file:</string>
    <string name="confirm">Confirm:</string>
    <string name="not_match_password">Passwords do not match.</string>
    <string name="not_match_pattern" formatted="false">Value does not match the given pattern: %s</string>
    <string name="not_selected">&lt;Not Selected&gt;</string>
    <string name="complete_req_fields">Please complete all required fields before saving.</string>
    <string name="admin_password">Administrative Password</string>
    <string name="available_forms">Available Forms</string>
    <string name="select_form">Please select an Epi Info form.</string>
    <string name="select_form_data_collection">Please select an Epi Info form for data collection</string>
    <string name="select_form_data_analysis">Please select an Epi Info form for data analysis</string>
    <string name="exit_form">Exit the form without saving?</string>
    <string name="replace_audio">This will replace the existing audio. Continue?</string>
    <string name="replace_video">This will replace the existing video. Continue?</string>
    <string name="barcode_settings">Barcode Settings</string>
    <string name="select_barcode_field">Select barcode field</string>
    <string name="gps_settings">GPS Settings</string>
    <string name="select_lat_field">Select latitude field</string>
    <string name="select_long_field">Select longitude field</string>
    <string name="gps_error">Could not receive GPS signals to determine current position. Please ensure that you have unobstructed view of sky and try again.</string>
    <string name="photo_error">Photograph was not captured. Please try again.</string>
    <string name="database_error">An error occurred while loading the database.</string>
    <string name="no_fields">There are no data fields on this form.</string>
    <string name="record_count" formatted="false">Records (%s)</string>
    <string name="loading_form">Loading Form</string>
    <string name="loading">Loading</string>
    <string name="please_wait">Please wait&#8230;</string>
    <string name="confirm_delete">This will permanently delete this record. Are you sure?</string>
    <string name="confirm_delete_all">This will delete all data associated with this form. Are you sure?</string>
    <string name="configure_cloud">Cloud synchronization has not been configured. Configure it now?</string>
    <string name="cloud_sync_started">Syncing with Cloud. Please check notification area for updates.</string>
    <string name="cloud_sync_progress" formatted="false">Syncing with Cloud (%s)</string>
    <string name="cloud_sync_receiving">Receiving&#8230;</string>
    <string name="cloud_sync_sending">Sending / updating&#8230;</string>
    <string name="cloud_sync_complete" formatted="false">Sync complete (%s)</string>
    <string name="cloud_sync_complete_detail">Data was successfully synced with the cloud.</string>
    <string name="cloud_sync_failed" formatted="false">Sync failed (%s)</string>
    <string name="cloud_sync_failed_detail">Error syncing with cloud service. Please try again.</string>
    <string name="sync_file_password">Set Password</string>
    <string name="sync_file_started">Creating sync file. Please check notification area for updates.</string>
    <string name="set_default_form">Set this form as default</string>
    <string name="exit_default_form">Exit default mode</string>
    <string name="box_signin">Sign in to Box account</string>
    <string name="box_signout">Logout from Box</string>
    <string name="copies">How many copies?</string>
    <string name="id_exists">A location with this barcode already exists. Showing that location now.</string>
    <string name="statcalc_btn1">Sample Size: Population Survey</string>
    <string name="statcalc_btn2">Sample Size: Unmatched Case-Control</string>
    <string name="statcalc_btn3">Sample Size: Cohort / Cross Sectional</string>
    <string name="statcalc_btn4">2 x 2 Tables</string>
    <string name="statcalc_btn5">Matched Pair Case Control</string>
    <string name="statcalc_btn6">Analysis of Linear Trend</string>
    <string name="statcalc_btn7">Poisson</string>
    <string name="statcalc_btn8">Binomial</string>
    <string name="statcalc_btn9">More calculators at OpenEpi.com</string>
    <string name="statcalc_pop_srv_desc">Population survey or descriptive study using random (not cluster) sampling</string>
    <string name="statcalc_unmatched_desc">Unmatched Case-Control Study</string>
    <string name="statcalc_cohort_desc">Unmatched Cohort / Cross-Sectional Study</string>
    <string name="statcalc_2x2_desc">Analysis of Single and Stratified Tables</string>
    <string name="statcalc_matched_desc">Matched Pair Case Control</string>
    <string name="statcalc_poisson_desc">Poisson Calculator</string>
    <string name="statcalc_binomial_desc">Binomial Calculator</string>
    <string name="statcalc_conf_level">Confidence Level</string>
    <string name="statcalc_sample_size">Sample Size</string>
    <string name="statcalc_pop_size">Population size:</string>
    <string name="statcalc_exp_freq">Expected frequency:</string>
    <string name="statcalc_conf_limits">Confidence limits:</string>
    <string name="statcalc_cases">Cases</string>
    <string name="statcalc_controls">Controls</string>
    <string name="statcalc_exposed">Exposed</string>
    <string name="statcalc_unexposed">Unexposed</string>
    <string name="statcalc_disease">Disease</string>
    <string name="statcalc_exposure">Exposure</string>
    <string name="statcalc_estimate">Estimate</string>
    <string name="statcalc_lower">Lower</string>
    <string name="statcalc_upper">Upper</string>
    <string name="statcalc_score">Score</string>
    <string name="statcalc_total">Total</string>
    <string name="statcalc_two_sided">Two-sided confidence level:</string>
    <string name="statcalc_power">Power:</string>
    <string name="statcalc_control_ratio">Ratio of controls to cases:</string>
    <string name="statcalc_pct_ctrl_exp">Percent of controls exposed:</string>
    <string name="statcalc_odds_ratio">Odds Ratio:</string>
    <string name="statcalc_pct_case_exp">Percent of cases with exposure:</string>
    <string name="statcalc_ratio_exposed">Ratio (Unexposed : Exposed):</string>
    <string name="statcalc_pct_out_uexp">% outcome in unexposed group:</string>
    <string name="statcalc_risk_ratio">Risk Ratio:</string>
    <string name="statcalc_risk_diff">Risk Difference:</string>
    <string name="statcalc_pct_out_exp">% outcome in exposed group:</string>
    <string name="statcalc_summary_stat">Summary Statistics</string>
    <string name="statcalc_odds_prm">Odds Based Parameters</string>
    <string name="statcalc_risk_prm">Risk Based Parameters</string>
    <string name="statcalc_stat_tests">Statistical Tests</string>
    <string name="statcalc_uncorrected">Uncorrected:</string>
    <string name="statcalc_corrected">Corrected:</string>
    <string name="statcalc_poisson_prob">Probability that the number of events found is</string>
    <string name="statcalc_obs_events">Observed # of events:</string>
    <string name="statcalc_exp_events">Expected # of events:</string>
    <string name="statcalc_95_conf">95% confidence interval</string>
    <string name="statcalc_numerator">Numerator:</string>
    <string name="statcalc_total_obs">Total observations:</string>
    <string name="statcalc_exp_pct">Expected percentage:</string>
    <string name="dash_indices">Indices</string>
    <string name="dash_container_types">Positive container types</string>
    <string name="dash_container_index">Container index</string>
    <string name="dash_house_index">House index</string>
    <string name="dash_breteau_index">Breteau index</string>
<string name="dash_pupae_index">Pupae index</string>
<string name="dash_ovitrap_index">Ovitrap positive index</string>
<string name="dash_ovitrap_density">Ovitrap density index</string>
<string name="dash_gravid_density">Gravid trap density</string>
<string name="dash_gravid_index">Gravid trap positivity</string>
    <string name="dash_ppc">Pupae per container</string>
    <string name="dash_ppp">Pupae per person</string>
    <string name="dash_maps">Maps</string>
    <string name="dash_charts">Charts</string>
    <string name="dash_collection_map">Collection activity map</string>
    <string name="dash_trapping_map">Trapping activity map</string>
    <string name="dash_inf_map">Infestation map</string>
    <string name="dash_filter">Data filter</string>
    <string name="analysis_add_freq">Add Frequency Gadget</string>
    <string name="analysis_add_means">Add Means Gadget</string>
    <string name="analysis_add_2x2">Add 2x2 Gadget</string>
    <string name="analysis_add_map">Add Map Gadget</string>
    <string name="analysis_add_chart_pie">Add Pie Chart</string>
    <string name="analysis_view_list">View Line List</string>
    <string name="analysis_freq">Frequency</string>
    <string name="analysis_field">Field:</string>
    <string name="analysis_select">&lt;Select&gt;</string>
    <string name="analysis_obs">Observations:</string>
    <string name="analysis_total">Total:</string>
    <string name="analysis_mean">Mean:</string>
    <string name="analysis_var">Variance:</string>
    <string name="analysis_std">Std. Deviation:</string>
    <string name="analysis_min">Minimum:</string>
    <string name="analysis_med">Median:</string>
    <string name="analysis_max">Maximum:</string>
    <string name="analysis_outcome">Outcome</string>
    <string name="analysis_lat">Latitude Field:</string>
    <string name="analysis_long">Longitude Field:</string>
</resources>